# loco_detect

./: .gitignore  README.md  client.py  client2.py  model_train.py  mypy.ini  param_writer.py  parameters.pickled  pyproject.toml  server.py  transcoder.py  transcoder_another.py
templates/: index.html
