[project]
name = "loco-detect"
version = "0.1.0"
description = "LocoTech video detection system"
readme = "README.md"
license = "LICENSE.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.4.0",
    "fastapi[standard]>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pika>=1.3.2",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pynput>=1.8.1",
    "taskiq>=0.11.17",
    "taskiq-aio-pika>=0.4.2",
    "tensorflow>=2.19.0",
    "types-pynput>=1.8.1.20250318",
    "ultralytics>=8.3.151",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "types-pynput>=1.8.1.20250318",
    "types-requests>=2.32.0.20250602",
]
